feature[ats_ZPPTH]: Configure application server to use https
Change-Id: Ic303fd99ffca233b8a8976b9be7f1b559387cb8a